# undoable

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: undoable.py
test/: test_undoable.py
